--- a/config.yml
+++ b/config.yml
@@ -3,9 +3,9 @@
 # 是否开启多会话模式
 multi_session: true
 # 是否开启姓名手机号打码
-mask_acc: true
+mask_acc: false
 # TUI 最大显示高度 null: 自适应高度
-tui_max_height: 25
+tui_max_height: 30
 # 会话存档路径
 session_path: "session/"
 # 日志文件路径
@@ -30,12 +30,12 @@ video:
 exam:
   # 使能
   enable: true
-  # 是否进行试题导出 可以将 `enable`设置为 false, 从而进行 dry run
-  export: false
   # 完成等待时间
-  wait: 15
-  # 作答失败后是否保存进度
+  wait: 0
+  # 是否匹配失败自动保存
   fail_save: true
+  # 是否进行试题导出
+  export: false
   # 导出文件路径
   export_path: "WorkExport.txt"
 
@@ -48,24 +48,24 @@ document:
 
 # --------------------
 
-# 搜索器选择 (可同时使用多个搜索器, 请取消注释以 yaml 语法中 list 格式添加, `type`字段决定搜索器类型)
+# 搜索器选择 (可同时使用多个搜索器, 以 yaml 语法中 list 格式添加, `type`字段决定搜索器类型)
 # 可用的搜索器有: restApiSearcher jsonFileSearcher sqliteSearcher enncySearcher cxSearcher
 searchers:
   # 本地 JSON 数据库搜索器 (key为题, value为答案)
-  - type: jsonFileSearcher
-    file_path: "questions.json"  # 数据库文件路径
+  # - type: jsonFileSearcher
+  #   file_path: "questions.json"  # 数据库文件路径
 
   # REST API 在线搜题
-  # - type: restApiSearcher
-  #   url: "http://10.50.9.10:8088/question/search"  # API URL 请进行替换
-  #   method: "POST"  # 请求方式
-  #   q_field: "question"  # 题目文本参数
-  #   o_field: null  # 选项文本参数 (可选)  用`#`分隔数据, 用来进一步匹配答案 (格式：选项A#选项B#选项C) 
-  #   headers:  # 自定义请求头 (可选) 使用 yaml 的 k-v 语法填写
-  #     # eg: Authorization: 'xxx'
-  #   ext_params: # 自定义扩展请求参数 (可选) 使用 yaml 的 k-v 语法填写
-  #     # eg: Token: 'xxx'
-  #   a_field: "$.data"  # 返回参数 使用 JSONPath 语法进行查询
+  - type: restApiSearcher
+    url: "http://10.50.9.10:8088/question/search"  # API URL 请进行替换
+    method: "POST"  # 请求方式
+    q_field: "question"  # 题目文本参数
+    o_field: "options"  # 选项文本参数（可选） 用`#`分隔数据，用来进一步匹配答案（格式：选项A#选项B#选项C）
+    headers:  # 自定义请求头(可选) 使用 yaml 的 k-v 语法填写
+      # eg: Authorization: 'xxx'
+    ext_params: # 自定义扩展请求参数(可选) 使用 yaml 的 k-v 语法填写
+      # eg: Token: 'xxx'
+    a_field: "$.data.answer"  # 返回参数 使用 JSONPath 语法进行查询
   
   # 本地 sqlite 数据库搜索器
   # - type: sqliteSearcher
@@ -74,10 +74,10 @@ searchers:
   #   req_field: "question"  # 请求字段
   #   rsp_field: "answer"  # 返回字段
 
-  # Enncy 题库搜索器, 使用前请注册 https://tk.enncy.cn/
+  # Enncy 题库搜索器，使用前请注册 https://tk.enncy.cn/
   # - type: enncySearcher
   #   token: "xxx"  # Enncy 题库 Token
 
-  # 网课小工具 (Go题) 题库搜索器, 使用前请获取Token https://cx.icodef.com/1-UserGuide/1-6-gettoken.html#%E8%8E%B7%E5%8F%96token
+  # 网课小工具(Go题)题库搜索器，使用前请获取Token https://cx.icodef.com/1-UserGuide/1-6-gettoken.html#%E8%8E%B7%E5%8F%96token
   # - type: cxSearcher
-  #   token: "xxx"  # 网课小工具 (Go题)题库 Token
+  #   token: "xxx"  # 网课小工具(Go题)题库 Token
